Fix background gap on components with low height

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -58,6 +58,10 @@ code {
     overflow: auto;
 }
 
+.min-height {
+    min-height: 250px;
+}
+
 .float-left {
     float: left;
 }
